@@ -77,6 +77,7 @@ Improved ZRCP:
 Improved External Audio Source window:
 - Show frequency when detected pilot tone or bits 0/1
 - Show approximate bytes read
+- Allow to enable input from this window
 
 Improved maximum sent keys to ZENG/ZENG Online
 Improved Windows timing and any other system using SDL video driver. Now uses SDL Timing
